individualComponents/WindowsLogon/BLESample/BLEDLLV2/BLEDLLV2_1.h

BLEDLLV2_API BLE_API_NP_RETURNS WINAPI MiTokenBLE_Pipe_SetNamedPipeMessageCallback(IMiTokenBLE* instance, void(*callback) (IMiTokenBLE* sender, unsigned char* data, int length, int connectionID));
BLEDLLV2_API BLE_CONN_RET WINAPI MiTokenBLE_CONN_ButtonPressedCallback(IMiTokenBLEConnection* instance, void(__stdcall *buttonPressed) (IMiTokenBLEConnection* requestID, int buttonID));