individualComponents/WindowsLogon/BLESample/BLE_API/DLLFunctions.cs


                }
                internal static class Device
                {
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncWaitForConnection(IntPtr instance, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncWaitForDisconnection(IntPtr instance, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncScanServicesInRange(IntPtr instance, int handle, ushort maxRange, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncRequestAttribute(IntPtr instance, int handle, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncRequestLongAttribute(IntPtr instance, int handle, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncSetAttribute(IntPtr instance, int handle, byte length, IntPtr data, int timeout);

                    [UnmanagedFunctionPointer(System.Runtime.InteropServices.CallingConvention.StdCall)]
                    internal delegate IntPtr AllocateBuffer(int length);
                    [UnmanagedFunctionPointer(System.Runtime.InteropServices.CallingConvention.StdCall)]
                    internal delegate void DeallocateBuffer(IntPtr buffer);

                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncReadAttribute(IntPtr instance, int handle, bool longRead, IntPtr dataLen, IntPtr pData, AllocateBuffer allocator, DeallocateBuffer deallocator, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncWaitForState(IntPtr instance, int handle, bool longRead, IntPtr stateList, byte stateCount, byte stateLength, AllocateBuffer allocator, DeallocateBuffer deallocator, int timeout);

                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_ScanServicesInRangeOfGUIDService(IntPtr instance, ushort handle, ushort maxRange);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncScanServicesInRangeOfGUIDService(IntPtr instance, ushort handle, ushort maxRange, int timout);

                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_GetCharacteristicHandleEx(IntPtr instance, ushort serviceID, ushort attributeID, IntPtr charHandle, bool serviceIsGUID, bool attributeIsGUID, int skipCount);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncGetCharacteristicHandleEx(IntPtr instance, ushort serviceID, ushort attributeID, IntPtr charHandle, bool serviceIsGUID, bool attributeIsGUID, int skipCount, int timeout);

                    [DllImport("BLEDLLV2.dll")]
                    internal static extern IntPtr MiTokenBLEV2_2_CONN_GetV2_2_Interface(IntPtr baseInterface);

                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncCustomWait(IntPtr instance, bool checkConnection, bool checkServiceScan, bool checkAttributeScan, bool checkWriting, bool checkReading, ushort checkServiceUUID, ushort checkAttributeUUID, bool serviceUUIDIsGUID, bool attributeUUIDIsGUID, int skipCount, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SetAttributeFromCharHandle(IntPtr instance, ushort handle, byte length, IntPtr data);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncSetAttributeFromCharHandle(IntPtr instance, ushort handle, byte length, IntPtr data, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_RequestAttributeFromCharHandle(IntPtr instance, ushort handle, bool longRead);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncRequestAttributeFromCharHandle(IntPtr instance, ushort handle, bool longRead, int timeout);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_ReadAttributeFromCharHandle(IntPtr instance, ushort handle, IntPtr length, IntPtr data, AllocateBuffer allocator,  DeallocateBuffer deallocator);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SyncReadAttributeFromCharHandle(IntPtr instance, ushort handle, IntPtr length, IntPtr data, AllocateBuffer allocator, DeallocateBuffer deallocator, int timeout);
	
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_UpdateConnectionParameters(IntPtr instance, ushort minimum, ushort maximum, ushort timeout, ushort latency);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SetWriteBlockBufferCount(IntPtr instance, int newMaxBlocksToBuffer);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SetExtendedWriteOffsetMode(IntPtr instance, bool offsetModeEnabled);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_SetExtendedWriteBlockSize(IntPtr instance, int newMaxBlocksToBuffer);

                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_EnableJeromeAccess(IntPtr instance);
                    [DllImport("BLEDLLV2.dll")]
                    internal static extern Core.CONN_RET MiTokenBLEV2_2_CONN_Jerome_SendNextBlock(IntPtr instance, bool canBeLastBlock);
                }
            }

            internal static class Bond
            {
                [DllImport("BLEDLLV2.dll")]
                internal static extern Core.BOND_RET MiTokenBLEV2_2_CONN_Bond_AddBondToToken(IntPtr bleInstance, IntPtr connInstance, IntPtr sha1Hash, IntPtr bondData);
                [DllImport("BLEDLLV2.dll")]
                internal static extern bool MiTokenBLEV2_2_CONN_Bond_RemoveAll(IntPtr bleInstance, IntPtr connInstance);
            }
        }
    }
}
